--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3-rc.0",
-    "nodemailer": "^6.7.0"
+    "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.0",
+    "sequelize": "^6.28.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -21,6 +22,7 @@
     "@typescript-eslint/parser": "^5.2.0",
     "eslint": "^8.1.0",
     "nodemon": "^2.0.14",
+    "sequelize-cli": "^6.5.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   },
