--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "core-js": "^3.6.5",
     "node-sass": "^8.0.0",
     "vue": "^2.6.11",
