--- a/server/package.json
+++ b/server/package.json
@@ -11,16 +11,19 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.0",
-    "sequelize": "^6.28.0"
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.28.0",
+    "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
-    "@types/node": "^16.11.6",
+    "@types/node": "^16.18.11",
     "@types/nodemailer": "^6.4.4",
     "@types/sequelize": "^4.28.14",
+    "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "eslint": "^8.1.0",
