--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "node-sass": "^8.0.0",
     "vue": "^2.6.11",
+    "vue-calendar-scheduler": "^0.0.17",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^4.1.0"
