--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.0",
+    "qrcode": "^1.5.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.28.0",
     "sequelize-typescript": "^2.1.5"
@@ -22,6 +23,7 @@
     "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.18.11",
     "@types/nodemailer": "^6.4.4",
+    "@types/qrcode": "^1.5.0",
     "@types/sequelize": "^4.28.14",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
