visit history changes, pending appointments wip

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "strictNullChecks":false,
+    //"strictNullChecks":false,
     "target": "esnext",
     "module": "esnext",
     "strict": true,
