--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,7 @@ SMTP_HOST = 127.0.0.1
 SMTP_PORT = 1025
 SMTP_USERNAME = ""
 SMTP_PASSWORD = ""
+DB_USERNAME = "root"
+DB_PASSWORD = "LOZINKA"
+DB_HOST = "127.0.0.1"
+DB_NAME = "ISA2022"
