--- a/server/.env.example
+++ b/server/.env.example
@@ -5,7 +5,7 @@ SMTP_HOST = 127.0.0.1
 SMTP_PORT = 1025
 SMTP_USERNAME = ""
 SMTP_PASSWORD = ""
-DB_USERNAME = "root"
-DB_PASSWORD = "LOZINKA"
+DB_USERNAME = ""
+DB_PASSWORD = ""
 DB_HOST = "127.0.0.1"
-DB_NAME = "ISA2022"
+DB_NAME = ""
